# mantarix-app-templates

./: LICENSE  README.md
default/: cookiecutter.json
default/{{cookiecutter.out_dir}}/: pyproject.toml
default/{{cookiecutter.out_dir}}/src/: main.py
